--- a/TestingProgram.App/MainWindow.xaml
+++ b/TestingProgram.App/MainWindow.xaml
@@ -7,6 +7,15 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <TabControl x:Name="TabControl_User">
+            <TabItem x:Name="TabItem_Student"
+                     Header="Студент">
+                
+            </TabItem>
+            <TabItem x:Name="TabItem_Teacher"
+                     Header="Преподаватель">
+                
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
