--- a/TestingProgram.App/MainWindow.xaml
+++ b/TestingProgram.App/MainWindow.xaml
@@ -6,7 +6,5 @@
         xmlns:local="clr-namespace:TestingProgram.App"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+    <Grid/>
 </Window>
