--- a/TestingProgram.App/AuthWindow.xaml
+++ b/TestingProgram.App/AuthWindow.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Class="TestingProgram.App.MainWindow"
+<Window x:Class="TestingProgram.App.AuthWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:TestingProgram.App"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         
-        Title="Программа для тестирования" Height="450" Width="500" ResizeMode="NoResize">
+        Title="Программа для тестирования" Height="380" Width="500" ResizeMode="NoResize">
     
     <Grid Background="Silver">
-        <Border MinWidth="400" VerticalAlignment="Center" Background="White" 
-                Padding="30" Margin="15" 
+        <Border MinWidth="400" Margin="15" Background="White" 
+                VerticalAlignment="Center" Padding="30" 
                 MaxWidth="500" CornerRadius="20">
             
             <Border.Effect>
@@ -19,13 +19,13 @@
             </Border.Effect>
             
             <StackPanel>
-                <TextBlock Text="Регистрация" FontSize="30" FontWeight="Bold" 
+                <TextBlock Text="Авторизация" FontSize="30" FontWeight="Bold" 
                            Margin="0 0 0 20" TextAlignment="Center"/>
                 
                 <Grid Margin="0 0 0 20">
-                    <Button HorizontalAlignment="Left" Content="Регистрация"/>
-                    <Button HorizontalAlignment="Right" Content="Войти"
-                            Click="Button_Window_Auth_OnClick"
+                    <Button HorizontalAlignment="Left" Content="Регистрация"
+                            Click="Button_Window_Reg_OnClick"/>
+                    <Button HorizontalAlignment="Right" Content="Войти" 
                             Style="{StaticResource MaterialDesignFlatButton}"/>
                 </Grid>
                 
@@ -33,12 +33,8 @@
                          Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 <PasswordBox x:Name="PassBox_Pass" materialDesign:HintAssist.Hint="Введите пароль"
                              Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
-                <PasswordBox x:Name="PassBox_Pass2" materialDesign:HintAssist.Hint="Повторите пароль"
-                             Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
-                <TextBox x:Name="TextBox_Email" materialDesign:HintAssist.Hint="Email"
-                         Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 
-                <Button Content="Зарегистрироваться" Margin="0 20" Click="Button_Reg_OnClick"/>
+                <Button Content="Авторизоваться" Margin="0 20" Click="Button_Auth_OnClick"/>
                 
             </StackPanel>
             
