--- a/TestingProgram.App/AuthWindow.xaml
+++ b/TestingProgram.App/AuthWindow.xaml
@@ -7,9 +7,12 @@
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         
-        Title="Программа для тестирования" Height="380" Width="500" ResizeMode="NoResize">
+        Title="Окно входа" Height="380" Width="500" 
+        ResizeMode="NoResize" AllowsTransparency="True" 
+        Background="Transparent" WindowStyle="None"
+        WindowStartupLocation="CenterScreen">
     
-    <Grid Background="Silver">
+    <Grid>
         <Border MinWidth="400" Margin="15" Background="White" 
                 VerticalAlignment="Center" Padding="30" 
                 MaxWidth="500" CornerRadius="20">
