--- a/TestingProgram.App/AuthWindow.xaml
+++ b/TestingProgram.App/AuthWindow.xaml
@@ -7,37 +7,38 @@
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         
-        Title="Окно входа" Height="380" Width="500" 
+        Title="Окно входа" Height="300" Width="350" 
         ResizeMode="NoResize" AllowsTransparency="True" 
         Background="Transparent" WindowStyle="None"
         WindowStartupLocation="CenterScreen">
     
     <Grid>
-        <Border MinWidth="400" Margin="15" Background="White" 
-                VerticalAlignment="Center" Padding="30" 
-                MaxWidth="500" CornerRadius="20">
+        <Border MinWidth="300" Background="White" 
+                VerticalAlignment="Center" Padding="30 20 30 30" 
+                MaxWidth="400" CornerRadius="10">
             
             <Border.Effect>
                 <DropShadowEffect BlurRadius="30" Color="Gray" ShadowDepth="0"/>
             </Border.Effect>
             
             <StackPanel>
-                <TextBlock Text="Авторизация" FontSize="30" FontWeight="Bold" 
-                           Margin="0 0 0 20" TextAlignment="Center"/>
                 
-                <Grid Margin="0 0 0 20">
+                <TextBlock Text="Авторизация" FontSize="30" FontWeight="Bold" 
+                           TextAlignment="Center"/>
+                
+                <!--<Grid Margin="0 0 0 20">
                     <Button HorizontalAlignment="Left" Content="Регистрация"
                             Click="Button_Window_Reg_OnClick"/>
                     <Button HorizontalAlignment="Right" Content="Войти" 
                             Style="{StaticResource MaterialDesignFlatButton}"/>
-                </Grid>
+                </Grid>-->
                 
                 <TextBox x:Name="TextBox_Login" materialDesign:HintAssist.Hint="Введите логин"
                          Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 <PasswordBox x:Name="PassBox_Pass" materialDesign:HintAssist.Hint="Введите пароль"
                              Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
                 
-                <Button Content="Авторизоваться" Margin="0 20" Click="Button_Auth_OnClick"/>
+                <Button Content="Войти" Margin="0 20 0 0" Click="Button_Auth_OnClick"/>
                 
             </StackPanel>
             
