--- a/TestingProgram.App/WindowAutharization/AuthWindow.xaml
+++ b/TestingProgram.App/WindowAutharization/AuthWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="TestingProgram.App.AuthWindow"
+<Window x:Class="TestingProgram.App.WindowAutharization.AuthWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -26,15 +26,9 @@
                 <TextBlock Text="Авторизация" FontSize="30" FontWeight="Bold" 
                            TextAlignment="Center"/>
                 
-                <!--<Grid Margin="0 0 0 20">
-                    <Button HorizontalAlignment="Left" Content="Регистрация"
-                            Click="Button_Window_Reg_OnClick"/>
-                    <Button HorizontalAlignment="Right" Content="Войти" 
-                            Style="{StaticResource MaterialDesignFlatButton}"/>
-                </Grid>-->
-                
                 <TextBox x:Name="TextBox_Login" materialDesign:HintAssist.Hint="Введите логин"
                          Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                
                 <PasswordBox x:Name="PassBox_Pass" materialDesign:HintAssist.Hint="Введите пароль"
                              Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
                 
