--- a/Authorization.App/MainWindow.xaml
+++ b/Authorization.App/MainWindow.xaml
@@ -1,10 +1,12 @@
-﻿<Window x:Class="TestingProgram.App.MainWindow"
+﻿<Window x:Class="Authorization.App.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TestingProgram.App"
+        xmlns:local="clr-namespace:Authorization.App"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid/>
+    <Grid>
+
+    </Grid>
 </Window>
