--- a/Authtorization.App/AuthWindow.xaml
+++ b/Authtorization.App/AuthWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:TestingProgram.App"
+        xmlns:local="clr-namespace:TestingProgram1.App;assembly=TestingProgram1.App"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         
