--- a/TestingProgram1.App/Styles.xaml
+++ b/TestingProgram1.App/Styles.xaml
@@ -1,8 +1,9 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="Style_TexBoxAnswer" TargetType="TextBox">
-        <Setter Property="Width" Value="700"/>
-        <Setter Property="Height" Value="40"/>
+        <Setter Property="Margin" Value="0 10 0 0"/>
+        <Setter Property="Width" Value="740"/>
+        <Setter Property="Height" Value="60"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="Gray"/>
     </Style>
