--- a/ProgramForTesting.App/MWTesting.xaml
+++ b/ProgramForTesting.App/MWTesting.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:ProgramForTesting.App"
         mc:Ignorable="d"
         Title="MWTesting" Height="800" Width="1200"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        Loaded="MainWindow_Loaded">
 
     <Grid Margin="0,0,0,0">
         <Grid.Background>
@@ -19,10 +20,11 @@
                  VerticalAlignment="Top" Width="600" Height="80" FontFamily="Trebuchet MS" FontSize="30" TextAlignment="Center" 
                  Background="#FFB5EEF0" BorderThickness="0,0,0,0" FontWeight="Bold"/>
 
-        <ListBox x:Name="ListBoxTestList" Height="400" Width="800" HorizontalAlignment="Center" Margin="0,150,0,0" VerticalAlignment="Top" BorderThickness="2,2,2,2"/>
+        <ListBox x:Name="ListBoxTestList" Height="400" Width="800" HorizontalAlignment="Center" Margin="0,150,0,0" VerticalAlignment="Top" 
+                 BorderThickness="2,2,2,2" SelectionChanged="ListBoxTestList_OnSelectionChanged"/>
         <Button x:Name="ButtonSelectTest" Content="Подтвердить выбор теста" HorizontalAlignment="Center" Foreground="Black" BorderThickness="3,3,3,3" 
                 Width="400" Height="100" IsDefault="True" VerticalAlignment="Bottom" Margin="0,0,0,80" FontSize="30" FontFamily="Trebuchet MS"
-                Click="Button_Click">
+                Click="ButtonSelectTest_Click">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="DarkBlue"/>
