--- a/TestingProgram1.App/AdminWindow.xaml
+++ b/TestingProgram1.App/AdminWindow.xaml
@@ -64,15 +64,11 @@
                     <Button x:Name="ButtonAddTest" Width="150" Margin="0 10" Content="Добавить тест"
                             Background="Green" Click="ButtonAddTest_Click"/>
                     <StackPanel VerticalAlignment="Top">
-                        <ListBox x:Name="ListTest" Height="370" BorderBrush="BlueViolet" BorderThickness="2" SelectionChanged="ListTest_OnSelectionChanged" Margin="0,0,0,50">
-                            
+                        <ListBox x:Name="ListTest" Height="390" BorderBrush="BlueViolet" BorderThickness="2" SelectionChanged="ListTest_OnSelectionChanged" Margin="0,0,0,50">
+
                         </ListBox>
-                        <StackPanel Orientation="Horizontal">
-                            <Button x:Name="ButtonAddQuestions" Width="120" Margin="0 10" Padding="0" Content="Добавить вопросы"
-                            Background="Green" Click="ButtonAddQuestions_Click"/>
-                            <Button x:Name="ButtonDelTest" Width="120" Margin="5 10 0 10" Content="Удалить тест"
-                            Background="Red" Click="ButtonDelTest_Click"/>
-                        </StackPanel>
+                        <Button x:Name="ButtonDelTest" Width="120" HorizontalAlignment="Center" Content="Удалить тест"
+                            Background="Red"/>
                     </StackPanel>
                 </StackPanel>
             </Border>
@@ -84,14 +80,14 @@
                     <StackPanel Width="500">
                         <StackPanel Orientation="Horizontal">
                         <Label Margin="5" Content="УКАЖИТЕ НОМЕР ВОПРОСА В ТЕСТЕ:" HorizontalContentAlignment="Center"/>
-                        <TextBox x:Name="TextBoxAnsverNumber" Width="100"
-                                 BorderThickness="1 1 1 1" BorderBrush="BlueViolet" TextWrapping="Wrap"/>
+                        <TextBox x:Name="TextBoxQuestionNumber" Width="100"
+                                 BorderThickness="1 1 1 1" BorderBrush="BlueViolet" HorizontalContentAlignment="Center" TextWrapping="Wrap"/>
                         </StackPanel>
                         <Label Margin="5" Content="ВВЕДИТЕ ВОПРОС В ПОЛЕ НИЖЕ:" HorizontalContentAlignment="Center"/>
-                        <TextBox x:Name="TextBoxAnsver" Width="500"
+                        <TextBox x:Name="TextBoxQuestion" Width="500"
                                  BorderThickness="0 1 1 1" BorderBrush="BlueViolet" Height="80" TextWrapping="Wrap"/>
                     </StackPanel>
-                    <Image Source="https://ak.picdn.net/shutterstock/videos/1031243834/thumb/8.jpg"
+                    <Image x:Name="ImageQuestion" Source="https://ak.picdn.net/shutterstock/videos/1031243834/thumb/8.jpg"
                            Width="250" Height="auto" VerticalAlignment="Top" Stretch="Fill" />
                 </StackPanel>
             </Border>
@@ -110,26 +106,26 @@
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Cursor="Arrow">
                         <Border Margin="8 9 0 0" BorderBrush="DarkCyan" BorderThickness="1">
-                            <TextBox Margin="0" Text="" Width="85" TextAlignment="Center" />
+                            <TextBox x:Name="TextBoXAnswerGrade1" Margin="0" Text="" Width="85" TextAlignment="Center" />
                         </Border>
                         <Border Margin="8 9 0 0" BorderBrush="DarkCyan" BorderThickness="1">
-                            <TextBox Margin="0" Text="" Width="85" TextAlignment="Center" />
+                            <TextBox x:Name="TextBoXAnswerGrade2" Margin="0" Text="" Width="85" TextAlignment="Center" />
                         </Border>
                         <Border Margin="8 9 0 0" BorderBrush="DarkCyan" BorderThickness="1">
-                            <TextBox Margin="0" Text="" Width="85" TextAlignment="Center" />
+                            <TextBox x:Name="TextBoXAnswerGrade3" Margin="0" Text="" Width="85" TextAlignment="Center" />
                         </Border>
                         <Border Margin="8 9 0 0" BorderBrush="DarkCyan" BorderThickness="1">
-                            <TextBox Margin="0" Text="" Width="85" TextAlignment="Center" />
+                            <TextBox x:Name="TextBoXAnswerGrade4" Margin="0" Text="" Width="85" TextAlignment="Center" />
                         </Border>
                         <Border Margin="8 9 0 0" BorderBrush="DarkCyan" BorderThickness="1">
-                            <TextBox Margin="0" Text="" Width="85" TextAlignment="Center" />
+                            <TextBox x:Name="TextBoXAnswerGrade5" Margin="0" Text="" Width="85" TextAlignment="Center" />
                         </Border>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
             <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,0,0">
                 <Button x:Name="ButtonLoadImage" Content="Добавить изображение к вопросу"
-                        Margin="0" Width="250" Background="Transparent" Foreground="Black" VerticalAlignment="Top"/>
+                        Margin="0" Width="250" Background="Transparent" Foreground="Black" VerticalAlignment="Top" Click="ButtonLoadImage_Click"/>
             </StackPanel>
         </Grid>
 
@@ -142,15 +138,15 @@
                 <StackPanel HorizontalAlignment="Left" Width="750" Height="380" VerticalAlignment="Top">
                     <Label Margin="0" HorizontalContentAlignment="Center" Content="Введите варианты ответов :" />
                     <StackPanel>
-                        <TextBox Style="{StaticResource Style_TexBoxAnswer}" TextWrapping="Wrap">
+                        <TextBox x:Name="TextBoXAnswer1" Style="{StaticResource Style_TexBoxAnswer}" TextWrapping="Wrap">
                             Ответ 1</TextBox>
-                        <TextBox Style="{StaticResource Style_TexBoxAnswer}">
+                        <TextBox x:Name="TextBoXAnswer2" Style="{StaticResource Style_TexBoxAnswer}">
                             Ответ 2</TextBox>
-                        <TextBox Style="{StaticResource Style_TexBoxAnswer}">
+                        <TextBox x:Name="TextBoXAnswer3" Style="{StaticResource Style_TexBoxAnswer}">
                             Ответ 3</TextBox>
-                        <TextBox Style="{StaticResource Style_TexBoxAnswer}">
+                        <TextBox x:Name="TextBoXAnswer4" Style="{StaticResource Style_TexBoxAnswer}">
                             Ответ 4</TextBox>
-                        <TextBox Style="{StaticResource Style_TexBoxAnswer}">
+                        <TextBox x:Name="TextBoXAnswer5" Style="{StaticResource Style_TexBoxAnswer}">
                             Ответ 5</TextBox>
                     </StackPanel>
 
@@ -160,7 +156,7 @@
 
         <Grid Column="1" Row="4" Height="50">
             <StackPanel Orientation="Horizontal">
-                <Button Width="740" Content="ДОБАВИТЬ ВОПРОС В ТЕСТ"/>
+                <Button x:Name="ButtonAddQuestionToTest" Width="740" Content="ДОБАВИТЬ ВОПРОС В ТЕСТ" Click="ButtonAddQuestionToTest_Click"/>
             </StackPanel>
         </Grid>
 
