--- a/ProgramForTesting.App/Window1.xaml
+++ b/ProgramForTesting.App/Window1.xaml
@@ -5,15 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProgramForTesting.App"
         mc:Ignorable="d"
-        Title="Window1" Height="800" Width="1200"
-        WindowStartupLocation="CenterScreen">
+        Title="Window1" Height="800" Width="1200" ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen" WindowStyle="None" Background="LightGray"
+        BorderThickness="1" BorderBrush="BlueViolet" FontFamily="Calibri" FontWeight="Bold">
+    
     <Grid>
-        <Grid.Background>
-            <RadialGradientBrush>
-                <GradientStop Color="DarkGray"/>
-                <GradientStop Color="#FFB5ECEC" Offset="1"/>
-            </RadialGradientBrush>
-        </Grid.Background>
+        
         <TextBlock x:Name="InfoTextBlock" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,30,82,0" Width="200" Height="70" FontSize="50"/>
 
         <TextBlock x:Name="TextBlockTxt1" Text="Тест:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="160,230,0,0" Width="110" Height="80" FontSize="50"/>
@@ -23,14 +20,8 @@
         <TextBlock x:Name="TextBlockCurrentAttempt" Text="_____" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="678,0,0,0" Width="100" Height="80" FontSize="50"/>
 
 
-        <Button x:Name="ButtonSelectTest" Content="Начать тест" HorizontalAlignment="Center" Foreground="Black" BorderThickness="3,3,3,3" Width="400" Height="100" IsDefault="True" VerticalAlignment="Bottom" Margin="0,0,0,80" FontSize="30" FontFamily="Trebuchet MS" Click="ButtonSelectTest_Click">
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="LightBlue"/>
-                    <GradientStop Color="#FF7DBFD3" Offset="1"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-
+        <Button x:Name="ButtonSelectTest" Content="Начать тест" HorizontalAlignment="Center" 
+                Width="400" Height="70" IsDefault="True" VerticalAlignment="Bottom" Margin="0,0,0,80" 
+                FontSize="30" FontWeight="Bold" Click="ButtonSelectTest_Click"/>
     </Grid>
 </Window>
